# train-opt

./: CMakePresets.json  README.md
include/topt/Passes/: PassRegistry.h
include/topt/SimplifyCFG/: SimplifyCFG.h
lib/: CMakeLists.txt
lib/Passes/: CMakeLists.txt  PassRegistry.cpp  PassRegistry.def
lib/SimplifyCFG/: CMakeLists.txt  SimplifyCFG.cpp
presets/llvm/: CMakePresets.json
tools/topt/: CMakeLists.txt  topt.cpp
